static/css/style.css
/* ... */
[data-theme='light'] p {
	color: var(--clr-neutral-500);
	transition: color 300ms linear;
}
[data-theme='dark'] p {
	color: var(--clr-neutral-600);
	transition: color 300ms linear;
}

.container {
	--max-width: 1215px;
	--padding: 1rem;

	width: min(var(--max-width), 100% - (var(--padding)));
	margin-inline: auto;
}
.container-fluid {
	--max-width: 2560px;
	--padding: 1rem;

	width: min(var(--max-width), 100% - (var(--padding)));
	margin-inline: auto;
}
/* utility styles */

.bg-blur {
	backdrop-filter: saturate(180%) blur(30px);
	-webkit-backdrop-filter: blur(30px);
}
@supports not (backdrop-filter: blur(10px)) {
	.bg-blur {
		background-color: rgba(27, 27, 27, 0.477);
	}
}
.fw-bold {
	font-weight: var(--fw-bold);
}
.fw-semi-bold {
	font-weight: var(--fw-semi-bold);
}
.fw-regular {
	font-weight: var(--fw-regular);
}

.primary-heading {
	font-size: var(--fs-primary-heading);
	font-weight: var(--fw-bold);
	line-height: 1.2;
	letter-spacing: -2px;
}
.secondary-heading {
	font-size: var(--fs-secondary-heading);
	font-weight: var(--fw-bold);
	line-height: 1.2;
	letter-spacing: -0.24px;
}
.ternary-heading {
	font-size: var(--fs-ternary-heading);
	font-weight: var(--fw-semi-bold);
	line-height: 1.2;
	letter-spacing: -0.16px;
}
.paragraph {
	font-size: var(--fs-paragraph);
	font-weight: var(--fw-regular);
	line-height: 1.2;
	letter-spacing: -0.14px;
}
.section-heading {
	position: relative;
	font-size: var(--fs-section-heading);
	font-weight: var(--fw-regular);
	line-height: 1.2;
	letter-spacing: -0.14px;
	padding-left: 45px;
}
.section-heading::before {
	content: '';
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	left: 0;
	width: 5px;
	height: 5px;
	border-radius: 50%;
}
.section-heading::after {
	content: '';
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	left: 5px;
	width: 35px;
	height: 1px;
}
.margin-block-primary {
	margin-block: 30px;
}
.padding-block-primary {
	padding-block: 50px;
}
body {
	font-size: var(--fs-body);
	font-family: var(--ff-body);
	color: var(--clr-neutral-800);
	background-color: #f6f8f9;
}

[data-theme='light'] body {
	color: var(--clr-neutral-800);
	background-color: var(--clr-neutral-200);
	transition: background-color 300ms linear, color 300ms linear;
}
[data-theme='dark'] body {
	color: var(--clr-neutral-200);
	background-color: var(--clr-neutral-900);
	transition: background-color 300ms linear, color 300ms linear;
}

[data-theme='light'] .bg-primary {
	background-color: var(--clr-neutral-200);
	transition: background-color 300ms linear;
}
[data-theme='dark'] .bg-primary {
	background-color: var(--clr-neutral-900);
	transition: background-color 300ms linear;
}

[data-theme='light'] .bg-blur-primary {
	background-color: hsla(0, 0%, 58%, 0.35);
	transition: background-color 300ms linear;
}
[data-theme='dark'] .bg-blur-primary {
	background-color: hsla(0, 0%, 40%, 0.35);
	transition: background-color 300ms linear;
}

[data-theme='light'] .primary-heading,
[data-theme='light'] .secondary-heading {
	color: var(--clr-neutral-800);
	transition: color 300ms linear;
}
[data-theme='dark'] .primary-heading,
[data-theme='dark'] .secondary-heading {
	color: var(--clr-neutral-100);
	transition: color 300ms linear;
}

[data-theme='light'] .paragraph {
	color: var(--clr-neutral-500);
	transition: color 300ms linear;
}
[data-theme='dark'] .paragraph {
	color: var(--clr-neutral-600);
	transition: color 300ms linear;
}

[data-theme='light'] .section-heading {
	color: var(--clr-neutral-500);
	transition: color 300ms linear;
}
[data-theme='dark'] .section-heading {
	color: var(--clr-neutral-600);
	transition: color 300ms linear;
}

[data-theme='light'] .section-heading::before {
	background-color: var(--clr-neutral-900);
	transition: background-color 300ms linear;
}
[data-theme='dark'] .section-heading::before {
	background-color: var(--clr-neutral-100);
	transition: background-color 300ms linear;
}

[data-theme='light'] .section-heading::after {
	background-color: var(--clr-neutral-500);
	transition: background-color 300ms linear;
}
[data-theme='dark'] .section-heading::after {
	background-color: var(--clr-neutral-600);
	transition: background-color 300ms linear;
}

[data-theme='light'] .history-wrapper li::before {
	background-color: var(--clr-neutral-900);
	transition: background-color 300ms linear;
}
[data-theme='dark'] .history-wrapper li::before {
	background-color: var(--clr-neutral-100);
	transition: background-color 300ms linear;
}

[data-theme='light'] .history-wrapper li::after {
	background-color: var(--clr-neutral-500);
	transition: background-color 300ms linear;
}
[data-theme='dark'] .history-wrapper li::after {
	background-color: var(--clr-neutral-600);
	transition: background-color 300ms linear;
}

[data-theme='light'] .expertise-wrapper ul li:nth-child(2n) {
	background-color: var(--clr-neutral-300);
	transition: background-color 300ms linear;
}
[data-theme='dark'] .expertise-wrapper ul li:nth-child(2n) {
	background-color: var(--clr-neutral-800);
	transition: background-color 300ms linear;
}
/* [data-theme='light'] .contact-wrapper {
	background-color: var(--clr-neutral-300);
		transition: background-color 300ms linear;
}
[data-theme='dark'] .contact-wrapper {
	background-color: var(--clr-neutral-800);
		transition: background-color 300ms linear;
} */
[data-theme='light'] .center p::before,
[data-theme='light'] .center p::after {
	background-color: var(--clr-neutral-300);
	transition: background-color 300ms linear;
}
[data-theme='dark'] .center p::before,
[data-theme='dark'] .center p::after {
	background-color: var(--clr-neutral-800);
	transition: background-color 300ms linear;
}

/* Styles */

.button {
	border: 0;
	border-radius: var(--br-button);
	padding: 1.008em 1.805em;
	font-weight: var(--fw-semi-bold);
	font-size: var(--fs-button);
	text-decoration: none;
	line-height: 3.5;
	background-color: rgba(149, 149, 149, 0.35);
	color: var(--clr-neutral-900);
	text-transform: capitalize;
	cursor: pointer;
	white-space: nowrap;
}
/* ... */

